2003-12-21  Dale Johannesen  <dalej@apple.com>

PR optimization/12828
        * loop.c:  Add find_regs_nested to look inside CLOBBER(MEM).
        (scan_loop):  Call it.
        * regclass.c (reg_scan_mark_regs):  Look inside CLOBBER(MEM).


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@74935 138bc75d-0d04-0410-961f-82ee72b054a4